# socks5-bridge

./: .gitignore  Cargo.toml  README.md  com.local.socks5-bridge.plist  test_config.toml
src/: admin_api.rs  app.rs  cli.rs  config.rs  errors.rs  health.rs  lib.rs  listener.rs  logging.rs  main.rs  metrics.rs  policy.rs  relay.rs  session.rs
src/http_proxy/: mod.rs  parser.rs  request.rs  response.rs
src/socks5/: client.rs  protocol.rs  server.rs
tests/: integration_fake_socks.rs
